update build instructions